--- a/examples/test-cases.ipynb
+++ b/examples/test-cases.ipynb
@@ -9,19 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "\n",
-    "from traccuracy._tracking_graph import TrackingGraph\n",
-    "\n",
-    "sys.path.append(\"../tests/examples\")\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from example_matched_graphs import (\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "from matplotlib.patches import Patch\n",
+    "\n",
+    "from traccuracy._tracking_graph import TrackingGraph\n",
+    "\n",
+    "sys.path.append(\"../tests\")\n",
+    "\n",
+    "from examples.graphs import (\n",
     "    empty_gt,\n",
     "    empty_pred,\n",
     "    fn_edge_matched,\n",
@@ -32,15 +35,13 @@
     "    one_to_two,\n",
     "    two_to_one,\n",
     ")\n",
-    "from example_segmentations import (\n",
+    "from examples.segs import (\n",
     "    false_negative_segmentation_2d,\n",
     "    false_positive_segmentation_2d,\n",
     "    good_segmentation_2d,\n",
     "    oversegmentation_2d,\n",
     "    undersegmentation_2d,\n",
-    ")\n",
-    "from matplotlib.colors import ListedColormap\n",
-    "from matplotlib.patches import Patch"
+    ")"
    ]
   },
   {
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
