--- a/examples/ctc.ipynb
+++ b/examples/ctc.ipynb
@@ -50,7 +50,22 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading Fluo-N2DL-HeLa data from the CTC website\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fluo-N2DL-HeLa.zip: 199MB [00:18, 10.6MB/s]                              \n"
+     ]
+    }
+   ],
    "source": [
     "# Add a utility to make a progress bar when downloading the file\n",
     "class DownloadProgressBar(tqdm):\n",
@@ -80,15 +95,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading TIFFs:   0%|          | 0/92 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 402.71it/s]\n",
-      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 609.62it/s]\n"
+      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 419.73it/s]\n",
+      "Computing node attributes: 100%|██████████| 92/92 [00:00<00:00, 304.98it/s]\n",
+      "1 non-connected masks at t=23.\n",
+      "2 non-connected masks at t=52.\n",
+      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 553.93it/s]\n",
+      "Computing node attributes: 100%|██████████| 92/92 [00:00<00:00, 274.08it/s]\n"
      ]
     }
    ],
@@ -116,17 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matching frames: 100%|██████████| 92/92 [00:01<00:00, 90.00it/s] \n",
-      "Evaluating nodes: 100%|██████████| 8600/8600 [00:00<00:00, 645392.99it/s]\n",
-      "Evaluating FP edges: 100%|██████████| 8535/8535 [00:00<00:00, 923996.20it/s]\n",
-      "Evaluating FN edges: 100%|██████████| 8562/8562 [00:00<00:00, 990392.47it/s]\n"
+      "Matching frames: 100%|██████████| 92/92 [00:00<00:00, 188.47it/s]\n",
+      "Evaluating nodes: 100%|██████████| 8600/8600 [00:00<00:00, 617062.65it/s]\n",
+      "Evaluating FP edges: 100%|██████████| 8535/8535 [00:00<00:00, 1076546.02it/s]\n",
+      "Evaluating FN edges: 100%|██████████| 8562/8562 [00:00<00:00, 1080373.97it/s]"
      ]
     },
     {
@@ -148,33 +160,14 @@
       "                       'fp_nodes': 0,\n",
       "                       'ns_nodes': 0,\n",
       "                       'ws_edges': 47},\n",
-      "        'version': '0.0.3.dev5+gf8c982c'},\n",
-      "    {   'gt': 'Hela-01_GT',\n",
-      "        'matcher': {'name': 'CTCMatcher'},\n",
-      "        'metric': {'frame_buffer': (0, 1, 2), 'name': 'DivisionMetrics'},\n",
-      "        'pred': 'Hela-01_RES',\n",
-      "        'results': {   'Frame Buffer 0': {   'Division F1': 0.76,\n",
-      "                                             'Division Precision': 0.7169811320754716,\n",
-      "                                             'Division Recall': 0.8085106382978723,\n",
-      "                                             'False Negative Divisions': 18,\n",
-      "                                             'False Positive Divisions': 30,\n",
-      "                                             'Mitotic Branching Correctness': 0.6129032258064516,\n",
-      "                                             'True Positive Divisions': 76},\n",
-      "                       'Frame Buffer 1': {   'Division F1': 0.76,\n",
-      "                                             'Division Precision': 0.7169811320754716,\n",
-      "                                             'Division Recall': 0.8085106382978723,\n",
-      "                                             'False Negative Divisions': 18,\n",
-      "                                             'False Positive Divisions': 30,\n",
-      "                                             'Mitotic Branching Correctness': 0.6129032258064516,\n",
-      "                                             'True Positive Divisions': 76},\n",
-      "                       'Frame Buffer 2': {   'Division F1': 0.76,\n",
-      "                                             'Division Precision': 0.7169811320754716,\n",
-      "                                             'Division Recall': 0.8085106382978723,\n",
-      "                                             'False Negative Divisions': 18,\n",
-      "                                             'False Positive Divisions': 30,\n",
-      "                                             'Mitotic Branching Correctness': 0.6129032258064516,\n",
-      "                                             'True Positive Divisions': 76}},\n",
-      "        'version': '0.0.3.dev5+gf8c982c'}]\n"
+      "        'version': '0.1.2.dev104+gb367f32'}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -183,7 +176,7 @@
     "    gt_data=gt_data,\n",
     "    pred_data=pred_data,\n",
     "    matcher=CTCMatcher(),\n",
-    "    metrics=[CTCMetrics(), DivisionMetrics(frame_buffer=(0,1,2))],\n",
+    "    metrics=[CTCMetrics()],\n",
     ")\n",
     "pp.pprint(ctc_results)"
    ]
@@ -198,46 +191,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matching frames: 100%|██████████| 92/92 [00:15<00:00,  6.01it/s]\n"
+      "Matching frames: 100%|██████████| 92/92 [00:00<00:00, 186.84it/s]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[   {   'gt': 'Hela-01_GT',\n",
-      "        'matcher': {'iou_threshold': 0.1, 'name': 'IOUMatcher'},\n",
-      "        'metric': {'frame_buffer': (0, 1, 2), 'name': 'DivisionMetrics'},\n",
-      "        'pred': 'Hela-01_RES',\n",
-      "        'results': {   'Frame Buffer 0': {   'Division F1': 0.711340206185567,\n",
-      "                                             'Division Precision': 0.69,\n",
-      "                                             'Division Recall': 0.7340425531914894,\n",
-      "                                             'False Negative Divisions': 25,\n",
-      "                                             'False Positive Divisions': 31,\n",
-      "                                             'Mitotic Branching Correctness': 0.552,\n",
-      "                                             'True Positive Divisions': 69},\n",
-      "                       'Frame Buffer 1': {   'Division F1': 0.711340206185567,\n",
-      "                                             'Division Precision': 0.69,\n",
-      "                                             'Division Recall': 0.7340425531914894,\n",
-      "                                             'False Negative Divisions': 25,\n",
-      "                                             'False Positive Divisions': 31,\n",
-      "                                             'Mitotic Branching Correctness': 0.552,\n",
-      "                                             'True Positive Divisions': 69},\n",
-      "                       'Frame Buffer 2': {   'Division F1': 0.711340206185567,\n",
-      "                                             'Division Precision': 0.69,\n",
-      "                                             'Division Recall': 0.7340425531914894,\n",
-      "                                             'False Negative Divisions': 25,\n",
-      "                                             'False Positive Divisions': 31,\n",
-      "                                             'Mitotic Branching Correctness': 0.552,\n",
-      "                                             'True Positive Divisions': 69}},\n",
-      "        'version': '0.0.3.dev5+gf8c982c'}]\n"
+     "ename": "TypeError",
+     "evalue": "The matched data uses a matcher that does not meet the requirements of the metric. Check the documentation for the metric for more information.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m iou_results \u001b[38;5;241m=\u001b[39m \u001b[43mrun_metrics\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgt_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgt_data\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpred_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpred_data\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmatcher\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mIOUMatcher\u001b[49m\u001b[43m(\u001b[49m\u001b[43miou_threshold\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmetrics\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mDivisionMetrics\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmax_frame_buffer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m pp\u001b[38;5;241m.\u001b[39mpprint(iou_results)\n",
+      "File \u001b[0;32m~/Code/traccuracy/src/traccuracy/_run_metrics.py:43\u001b[0m, in \u001b[0;36mrun_metrics\u001b[0;34m(gt_data, pred_data, matcher, metrics)\u001b[0m\n\u001b[1;32m     41\u001b[0m results \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     42\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _metric \u001b[38;5;129;01min\u001b[39;00m metrics:\n\u001b[0;32m---> 43\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43m_metric\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmatched\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     44\u001b[0m     results\u001b[38;5;241m.\u001b[39mappend(result\u001b[38;5;241m.\u001b[39mto_dict())\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m results\n",
+      "File \u001b[0;32m~/Code/traccuracy/src/traccuracy/metrics/_base.py:60\u001b[0m, in \u001b[0;36mMetric.compute\u001b[0;34m(self, matched, override_matcher)\u001b[0m\n\u001b[1;32m     58\u001b[0m     valid_matcher \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_matcher(matched)\n\u001b[1;32m     59\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m valid_matcher:\n\u001b[0;32m---> 60\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m     61\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe matched data uses a matcher that does not meet the requirements \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     62\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mof the metric. Check the documentation for the metric for more information.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     63\u001b[0m         )\n\u001b[1;32m     65\u001b[0m res_dict \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compute(matched)\n\u001b[1;32m     67\u001b[0m results \u001b[38;5;241m=\u001b[39m Results(\n\u001b[1;32m     68\u001b[0m     results\u001b[38;5;241m=\u001b[39mres_dict,\n\u001b[1;32m     69\u001b[0m     matcher_info\u001b[38;5;241m=\u001b[39mmatched\u001b[38;5;241m.\u001b[39mmatcher_info,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     72\u001b[0m     pred_name\u001b[38;5;241m=\u001b[39mmatched\u001b[38;5;241m.\u001b[39mpred_graph\u001b[38;5;241m.\u001b[39mname,\n\u001b[1;32m     73\u001b[0m )\n",
+      "\u001b[0;31mTypeError\u001b[0m: The matched data uses a matcher that does not meet the requirements of the metric. Check the documentation for the metric for more information."
      ]
     }
    ],
@@ -245,8 +219,8 @@
     "iou_results = run_metrics(\n",
     "    gt_data=gt_data,\n",
     "    pred_data=pred_data,\n",
-    "    matcher=IOUMatcher(iou_threshold=0.1),\n",
-    "    metrics=[DivisionMetrics(frame_buffer=(0,1,2))],\n",
+    "    matcher=IOUMatcher(iou_threshold=0.1, one_to_one=True),\n",
+    "    metrics=[DivisionMetrics(max_frame_buffer=2)],\n",
     ")\n",
     "pp.pprint(iou_results)"
    ]
@@ -261,7 +235,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tracking-metrics",
+   "display_name": "traccuracy",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.16"
   },
   "orig_nbformat": 4
  },
